--- a/Sistema/contable/templates/Base/base.html
+++ b/Sistema/contable/templates/Base/base.html
@@ -49,7 +49,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/ingresarCuenta">
             <i class="fas fa-sort-numeric-up"></i>
-            <span>Ingresar Cuenta</span></a>
+            <span>Cuentas</span></a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -61,10 +61,16 @@
                     <a class="dropdown-item" href="/nuevo-puesto"><i class="fas fa-plus"></i> Ingresar</a>
                 </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sistema-salarial">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-money-check-alt"></i>
-            <span>Sistema Salarial</span></a>
+            <span>Planilla</span>
+          </a>
+                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <a class="dropdown-item" href="/planilla"><i class="fas fa-eye"></i> planilla</a>
+                    <a class="dropdown-item" href="/planilla-areas"><i class="fas fa-eye"></i>Planilla por areas</a>
+                    <a class="dropdown-item" href="/puestos"><i class="fas fa-eye"></i>puestos</a>
+                </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/planilla">
